# stochastic_simulation

./: project1.ipynb
excercises/: exercises.ipynb
exercises_karl/: ex1.ipynb  ex2.ipynb  ex3.ipynb  ex7.ipynb  plotting
project1/: project1part2&3.ipynb
project2/: Makefile  README.md  pyproject.toml  requirements.txt
project2/outputs/: .gitignore  test_run_1_custom_model_results.npy
project2/src/: main.py  run_basic_models.py  run_custom_model.py
project2/src/models/: CTMC.py  SIR.py  __init__.py  ctmc_model_factories.py
project_solutions/: project1.ipynb
solutions/: Lecture2_exercise2.py  Lecture2_exercise3.py  Lecture2_notes.md  Lecture3_exercise4.py  Lecture4_exercise5.py  Lecture5_exercise6.py  Lecture6_exercise7.py  Lecture6_exercise8.py  lecture1_0606.py  poission_erlang.txt  poission_exponential.txt  poission_hyperexpo.txt
